manifests/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    "service.alpha.openshift.io/serving-cert-secret-name": grafana-cert
spec:
  selector:
    name: grafana
  ports:
  - name: http
    protocol: TCP
    port: 443
    targetPort: http
