manifests/grafana/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: grafana
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
